--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <a href="index.html#projects">PROJECTS</a>
           </div>
           <ul class="menu_projects">
-            <li><a href="dist/projects/kaha.html">Kaha</a></li><!-- 
-             --><li><a href="dist/projects/yukfoo.html">Yukfoo</a></li><!-- 
-             --><li><a href="dist/projects/loaf.html">Loaf</a></li><!-- 
-             --><li><a href="dist/projects/br.html">Beauty Review</a></li>
+            <li><a href="projects/kaha.html">Kaha</a></li><!-- 
+             --><li><a href="projects/yukfoo.html">Yukfoo</a></li><!-- 
+             --><li><a href="projects/loaf.html">Loaf</a></li><!-- 
+             --><li><a href="projects/br.html">Beauty Review</a></li>
           </ul>
           <ul class="menu_social">
           <li><a class="icon_link" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank"></a></li><!-- 
@@ -99,10 +99,8 @@
         data-anchor-target=".projects"
         data-center-top=""
         data-center-bottom="">
-      <div class="name-link">Rawlinson</div><!-- 
-       --><div class="breadcrumb hello">/ HELLO</div><!-- 
-       --><div class="breadcrumb project">/ PROJECTS</div><!-- 
-       --><div class="breadcrumb contact">/ CONTACT</div>
+      <div class="name-link">Rawlinson</div>
+
 
     </div>
 
@@ -117,15 +115,20 @@
 
       
         <div class="wrapper">
-          <div class="main-title-container">
+          <div class="main-title-container" data-anchor-target=".opening"
+             data-top="transform:translateY(-50%) rotate(0deg);"
+              data-top-bottom="transform:translateY(200px) rotate(-20deg);">
             <div class="main-title">Rawlinson</div><!-- 
              --><div class="main-sub-title">UX/UI DESIGNER</div>
           </div>
             
         </div>
-        <div class="opening-image"></div>
-        <!-- <div class="noise_container">
-        </div> -->
+        <div class="opening-image"
+        data-anchor-target=".opening"
+             data-top="transform:translateY(0px);"
+              data-top-bottom="transform:translateY(100px);"
+              > 
+        </div>
       </section>
 
       <section class="intro" id="intro">
@@ -141,7 +144,7 @@
 
 
           <div class="prev_proj_container kaha">
-            <a name="projects" class="project" href="dist/projects/kaha.html">
+            <a name="projects" class="project" href="projects/kaha.html">
                 <img class="logo_prev" src="dist/images/logo_kaha.svg">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
@@ -150,7 +153,7 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-80%);">
             </a>
-            <a class="prev_textblock" href="dist/projects/kaha.html"
+            <a class="prev_textblock" href="projects/kaha.html"
                data-anchor-target=".prev_proj_container.kaha"
                data-center-top=""
                data-center-bottom="">
@@ -167,7 +170,7 @@
 
 
         --><div class="prev_proj_container yukfoo">
-            <a class="project" href="dist/projects/yukfoo.html">
+            <a class="project" href="projects/yukfoo.html">
                 <img class="logo_prev" src="dist/images/logo_yukfoo.svg">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
@@ -176,7 +179,7 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-80%);">
             </a>
-            <a class="prev_textblock" href="dist/projects/yukfoo.html"
+            <a class="prev_textblock" href="projects/yukfoo.html"
                 data-anchor-target=".prev_proj_container.yukfoo"
                 data-center-top=""
                 data-center-bottom="">
@@ -194,7 +197,7 @@
 
 
        --><div class="prev_proj_container br">
-            <a class="project" href="dist/projects/br.html">
+            <a class="project" href="projects/br.html">
                 <img class="logo_prev" src="dist/images/logo_br.svg">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
@@ -203,7 +206,7 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-80%);">
             </a>
-            <a class="prev_textblock" href="dist/projects/br.html"
+            <a class="prev_textblock" href="projects/br.html"
                data-anchor-target=".prev_proj_container.br"
                data-center-top=""
                data-center-bottom="">
@@ -221,7 +224,7 @@
 
 
        --><div class="prev_proj_container  loaf">
-            <a class="project"  href="dist/projects/loaf.html">
+            <a class="project"  href="projects/loaf.html">
                <img class="logo_prev" src="dist/images/logo_loaf.png">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
@@ -230,7 +233,7 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-80%);">
             </a>
-            <a class="prev_textblock"  href="dist/projects/loaf.html"
+            <a class="prev_textblock"  href="projects/loaf.html"
                data-anchor-target=".prev_proj_container.loaf"
                data-center-top=""
                data-center-bottom="">
