--- a/projects/kaha.html
+++ b/projects/kaha.html
@@ -7,27 +7,27 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Greg Rawlinson / Project</title>
-    <link href="../css/styles.css" rel="stylesheet" type="text/css">
+    <link href="../dist/css/styles.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
 
 
-   <link rel="apple-touch-icon" sizes="57x57" href="../../dist/images/favicon.ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../../dist/images/favicon.ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../../dist/images/favicon.ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../../dist/images/favicon.ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../../dist/images/favicon.ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../../dist/images/favicon.ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../../dist/images/favicon.ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../../dist/images/favicon.ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../../dist/images/favicon.ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="../../dist/images/favicon.ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../dist/images/favicon.ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../../dist/images/favicon.ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../dist/images/favicon.ico/favicon-16x16.png">
-    <link rel="manifest" href="../../dist/images/favicon.ico/manifest.json">
+   <link rel="apple-touch-icon" sizes="57x57" href="../dist/images/favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../dist/images/favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../dist/images/favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../dist/images/favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../dist/images/favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../dist/images/favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../dist/images/favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../dist/images/favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../dist/images/favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../dist/images/favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../dist/images/favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../dist/images/favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../dist/images/favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="../dist/images/favicon.ico/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -35,7 +35,7 @@
 
 
 
-    <script src="../js/all.min.js"></script>
+    <script src="../dist/js/all.min.js"></script>
   </head>
   <body>
 
@@ -62,15 +62,15 @@
     <div class="menu_overlay hidden">
       <div class="wrapper">
         <div class="menu_content_container">
-          <a class="menu_title" href="../../index.html">Rawlinson</a>
+          <a class="menu_title" href="../">Rawlinson</a>
           <div class="menu_project_heading">
-            <a href="../../index.html#projects">PROJECTS</a>
+            <a href="../#projects">PROJECTS</a>
           </div>
           <ul class="menu_projects">
-            <li><a href="../../dist/projects/kaha.html">Kaha</a></li><!-- 
-             --><li><a href="../../dist/projects/yukfoo.html">Yukfoo</a></li><!-- 
-             --><li><a href="../../dist/projects/loaf.html">Loaf</a></li><!-- 
-             --><li><a href="../../dist/projects/br.html">Beauty Review</a></li>
+            <li><a href="../projects/kaha.html">Kaha</a></li><!-- 
+             --><li><a href="../projects/yukfoo.html">Yukfoo</a></li><!-- 
+             --><li><a href="../projects/loaf.html">Loaf</a></li><!-- 
+             --><li><a href="../projects/br.html">Beauty Review</a></li>
           </ul>
           <ul class="menu_social">
           <li><a class="icon_link" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank"></a></li><!-- 
@@ -87,7 +87,7 @@
 
       <div class="navigation">
         <div class="wrapper">
-          <a class="home_logo" href="../../index.html">Rawlinson</a>
+          <a class="home_logo" href="../">Rawlinson</a>
 
 
           
@@ -139,7 +139,7 @@
       <div class="project_segments">
         <section>
           <div class="wrapper">
-              <img class="project_image" src="../images/project_kaha_1.jpg" alt="kaha_preso">
+              <img class="project_image" src="../dist/images/project_kaha_1.jpg" alt="kaha_preso">
           </div>
         </section>
 
@@ -158,7 +158,7 @@
 
         <section>
           <div class="wrapper">
-              <img class="project_image" src="../images/project_kaha_2.jpg" alt="kaha_preso">
+              <img class="project_image" src="../dist/images/project_kaha_2.jpg" alt="kaha_preso">
           </div>
         </section>
 
@@ -190,7 +190,7 @@
               </div>
             </div>
 
-            <img class="project_screen" src="../images/project_kaha_3.png" alt="kaha_preso"><!-- 
+            <img class="project_screen" src="../dist/images/project_kaha_3.png" alt="kaha_preso"><!-- 
            --></div>
         </section>
 
@@ -204,7 +204,7 @@
                 <p>We split the importing of Actual Costs into three parts, it was necessary to include a wizard to show the number of steps left to complete the importing process and keep the user engaged. My aim throughout the product is to keep things as simple as possible for the user and reduce the clutter.</p><p>It was necessary for a link to be added here explaining to the user how to correctly format their CSV file.</p>
               </div>
             </div>
-            <img class="project_screen" src="../images/project_kaha_4.png" alt="kaha_preso">
+            <img class="project_screen" src="../dist/images/project_kaha_4.png" alt="kaha_preso">
           </div>
         </section>
 
@@ -219,7 +219,7 @@
 In this step we’ve used different icons to indicate there are two different actions that will take place when the user clicks on the alerted row.</p>
               </div>
             </div>
-            <img class="project_screen" src="../images/project_kaha_5.png" alt="kaha_preso">
+            <img class="project_screen" src="../dist/images/project_kaha_5.png" alt="kaha_preso">
           </div>
         </section>
 
@@ -234,7 +234,7 @@ In this step we’ve used different icons to indicate there are two different ac
               </div>
             </div>
 
-            <img class="project_screen" src="../images/project_kaha_6.png" alt="kaha_preso"><!-- 
+            <img class="project_screen" src="../dist/images/project_kaha_6.png" alt="kaha_preso"><!-- 
            --></div>
         </section>
 
@@ -248,7 +248,7 @@ In this step we’ve used different icons to indicate there are two different ac
                 <p>The idea behind the app is that contractors are required to upload their timesheets into the system on a daily basis, thereby giving managers an accurate picture of where they are at on a day to day basis. This piece of functionality has yet to be built.</p>
               </div>
             </div>
-            <img class="project_screen" src="../images/project_kaha_7.jpg" alt="kaha_preso">
+            <img class="project_screen" src="../dist/images/project_kaha_7.jpg" alt="kaha_preso">
           </div>
         </section>
 
@@ -261,7 +261,6 @@ In this step we’ve used different icons to indicate there are two different ac
 
       <footer>
         <div class="wrapper">
-            <a class="footer_home" href="../../index.html">Rawlinson</a>
             <div class="contactdets">
               <a class="mobile" href="tel:+64 22 10857">022 1085795</a>
               <a class="email" href="mailto:sgregraw@hotmail.com" target="_top">gregraw@hotmail.com</a>
