--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="menu_content_container">
           <a class="menu_title" href="index.html">Rawlinson</a>
           <div class="menu_project_heading" >
-            <a href="index.html#projects">PROJECTS</a>
+            <a href="#projects">PROJECTS</a>
           </div>
           <ul class="menu_projects">
             <li><a href="projects/kaha.html">Kaha</a></li><!-- 
@@ -96,9 +96,8 @@
     </div>
 
     <div class="homepage_home"
-        data-anchor-target=".projects"
-        data-center-top=""
-        data-center-bottom="">
+        data-anchor-target=".intro"
+        data-top="">
       <div class="name-link">Rawlinson</div>
 
 
@@ -116,7 +115,7 @@
       
         <div class="wrapper">
           <div class="main-title-container" data-anchor-target=".opening"
-             data-top="transform:translateY(-50%) rotate(0deg);"
+             data-top="transform:translateY(-80%) rotate(0deg);"
               data-top-bottom="transform:translateY(200px) rotate(-20deg);">
             <div class="main-title">Rawlinson</div><!-- 
              --><div class="main-sub-title">UX/UI DESIGNER</div>
@@ -126,7 +125,7 @@
         <div class="opening-image"
         data-anchor-target=".opening"
              data-top="transform:translateY(0px);"
-              data-top-bottom="transform:translateY(100px);"
+              data-top-bottom="transform:translateY(300px);"
               > 
         </div>
       </section>
@@ -254,7 +253,7 @@
 
       <section class="more_about">
         <div class="wrapper">
-          <h1>Defining & designing<br />digital product experiences.</h1>
+          <h1>Designing & defining<br />digital product experiences.</h1>
           <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please view my <a class="underline" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
