--- a/projects/br.html
+++ b/projects/br.html
@@ -52,6 +52,14 @@
       </div>
     </div>
 
+    <div class="color-slides">
+          <div class="blue-slide"></div>
+          <div class="red-slide"></div>
+          <div class="purple-slide"></div>
+          <div class="black-slide"></div>
+          <div class="white-slide"></div>
+      </div>
+
    
 
     <div class="menu_overlay hidden">
@@ -59,13 +67,13 @@
         <div class="menu_content_container">
           <a class="menu_title" href="../">Rawlinson</a>
           <div class="menu_project_heading">
-             <a href="../#projects">PROJECTS</a>
+             <a class="projects-link" href="../#projects">PROJECTS</a>
           </div>
           <ul class="menu_projects">
-            <li><a href="../projects/kaha.html">Kaha</a></li><!-- 
-             --><li><a href="../projects/yukfoo.html">Yukfoo</a></li><!-- 
-             --><li><a href="../projects/loaf.html">Loaf</a></li><!-- 
-             --><li><a href="../projects/br.html">Beauty Review</a></li>
+            <li><a class="kaha" href="../projects/kaha.html">Kaha</a></li><!-- 
+             --><li><a class="yukfoo" href="../projects/yukfoo.html">Yukfoo</a></li><!-- 
+             --><li><a class="loaf" href="../projects/loaf.html">Loaf</a></li><!-- 
+             --><li><a class="br" href="../projects/br.html">Beauty Review</a></li>
           </ul>
           <ul class="menu_social">
           <li><a class="icon_link" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank"></a></li><!-- 
