--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <div class="menu_content_container">
           <a class="menu_title" href="index.html">Rawlinson</a>
           <div class="menu_project_heading" >
-            <a href="#projects">PROJECTS</a>
+            <a class="projects-link" href="#projects">PROJECTS</a>
           </div>
           <ul class="menu_projects">
-            <li><a href="projects/kaha.html">Kaha</a></li><!-- 
-             --><li><a href="projects/yukfoo.html">Yukfoo</a></li><!-- 
-             --><li><a href="projects/loaf.html">Loaf</a></li><!-- 
-             --><li><a href="projects/br.html">Beauty Review</a></li>
+            <li><a class="kaha" href="projects/kaha.html">Kaha</a></li><!-- 
+             --><li><a class="yukfoo" href="projects/yukfoo.html">Yukfoo</a></li><!-- 
+             --><li><a class="loaf" href="projects/loaf.html">Loaf</a></li><!-- 
+             --><li><a class="br" href="projects/br.html">Beauty Review</a></li>
           </ul>
           <ul class="menu_social">
           <li><a class="icon_link" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank"></a></li><!-- 
@@ -125,6 +125,7 @@
         <div class="opening-image"
         data-anchor-target=".opening"
              data-top="transform:translateY(0px);"
+             data--100-top="transform:translateY(0px);"
               data-top-bottom="transform:translateY(300px);"
               > 
         </div>
@@ -140,8 +141,6 @@
       </section>
 
       <section class="projects">
-
-
           <div class="prev_proj_container kaha">
             <a name="projects" class="project" href="projects/kaha.html">
                 <img class="logo_prev" src="dist/images/logo_kaha.svg">
@@ -165,6 +164,13 @@
                   data-center-bottom="transform:translate(-5%,-100%);"
                   data-center-top="transform:translate(-15%,0%);">Kaha
             </div>
+
+            <div class="skills_overview"
+              data-anchor-target=".prev_proj_container.kaha"
+               data-center-top=""
+               data-center-bottom="">
+            <div>Branding</div>/<div>User-Stories</div>/<div>Wireframing</div>/<div>UX</div>/<div>UI-Design</div>/<div>High Fidelity Mockups</div>/<div>HTML/CSS Prototypes</div>/<div>Wordpress</div>
+            </div>
           </div><!-- 
 
 
@@ -183,13 +189,19 @@
                 data-center-top=""
                 data-center-bottom="">
               <div class="title">Yukfoo</div>
-              <!-- <div class="year">2014</div> -->
               <p class="description">2014 | Animation facility and production company.</p>
             </a>
             <div class="big_blocktext"
                 data-anchor-target=".prev_proj_container.yukfoo"
                 data-center-bottom="transform:translate(-5%,-100%);"
                 data-center-top="transform:translate(-15%,0%);">Yukfoo
+            </div>
+
+            <div class="skills_overview"
+              data-anchor-target=".prev_proj_container.yukfoo"
+               data-center-top=""
+               data-center-bottom="">
+            <div>Branding</div>/<div>User-Stories</div>/<div>Wireframing</div>/<div>UX</div>/<div>UI-Design</div>/<div>High Fidelity Mockups</div>/<div>HTML/CSS Prototypes</div>
             </div>
           </div><!-- 
 
@@ -218,6 +230,13 @@
                 data-center-bottom="transform:translate(-5%,-100%);"
                 data-center-top="transform:translate(-15%,0%);">Beauty
             </div>
+
+            <div class="skills_overview"
+              data-anchor-target=".prev_proj_container.br"
+               data-center-top=""
+               data-center-bottom="">
+            <div>Branding</div>/<div>UX</div>/<div>UI-Design</div>/<div>High Fidelity Mockups</div>/<div>HTML/CSS Prototypes</div>
+            </div>
           </div><!-- 
 
 
@@ -245,15 +264,26 @@
                 data-center-bottom="transform:translate(-5%,-100%);"
                 data-center-top="transform:translate(-15%,0%);">Loaf
             </div>
-          </div>
 
-
-             
+            <div class="skills_overview"
+              data-anchor-target=".prev_proj_container.loaf"
+               data-center-top=""
+               data-center-bottom="">
+            <div>Branding</div>/<div>Wireframes</div>/<div>UX</div>/<div>UI-Design</div>/<div>High Fidelity Mockups</div>
+            </div>   
       </section>
+
+      <div class="color-slides">
+          <div class="blue-slide"></div>
+          <div class="red-slide"></div>
+          <div class="purple-slide"></div>
+          <div class="black-slide"></div>
+           <div class="white-slide"></div>
+      </div>
 
       <section class="more_about">
         <div class="wrapper">
-          <h1>Designing & defining<br />digital product experiences.</h1>
+          <h1>Defining & designing<br />digital product experiences.</h1>
           <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please view my <a class="underline" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
