--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
 
 
 
-
-
-
     
   </head>
   <body>
@@ -278,10 +275,11 @@
           <div class="red-slide"></div>
           <div class="purple-slide"></div>
           <div class="black-slide"></div>
+          <div class="plainblack-slide"></div>
            <div class="white-slide"></div>
       </div>
 
-      <section class="more_about">
+      <section class="more_about" data-center-top="">
         <div class="wrapper">
           <h1>Defining & designing<br />digital product experiences.</h1>
           <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please view my <a class="underline" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
@@ -363,14 +361,47 @@
 
        
       </div><!-- main closed -->
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
        <script src="dist/js/all.min.js"></script>
-      <script>
+        <script>
         if(!(/Android|iPhone|iPad|iPod|BlackBerry|Windows Phone/i).test(navigator.userAgent || navigator.vendor || window.opera)){
               skrollr.init({
                   forceHeight: false
               });
           }
       </script>
+
+      <script>
+      $(window).bind("load", function() {
+
+        $.preloadImages = function() {
+            for (var i = 0; i < arguments.length; i++) {
+              $("<img />").attr("src", arguments[i]);
+            }
+          }
+          $.preloadImages(
+            "dist/images/intropaper_kaha.jpg",
+            "dist/images/intropaper_br.jpg",
+            "dist/images/intropaper_loaf.jpg",
+            "dist/images/intropaper_yukfoo.jpg",
+            "dist/images/project_kaha_1.jpg",
+            "dist/images/project_kaha_2.jpg",
+            "dist/images/project_kaha_3.png",
+            "dist/images/project_kaha_4.png",
+            "dist/images/project_kaha_5.png",
+            "dist/images/project_kaha_6.png",
+            "dist/images/project_kaha_7.jpg",
+            "dist/images/project_loaf_1.jpg",
+            "dist/images/project_loaf_2.jpg",
+            "dist/images/project_loaf_3.jpg",
+            "dist/images/project_loaf_4.jpg",
+            "dist/images/project_yf_1.jpg",
+            "dist/images/project_yf_2.jpg",
+            "dist/images/project_yf_3.jpg",
+            "dist/images/project_br_1.jpg",
+            "dist/images/project_br_2.jpg");
+
+      });
+    </script>
   </body>
 </html>
