--- a/projects/yukfoo.html
+++ b/projects/yukfoo.html
@@ -30,7 +30,7 @@
     <meta name="theme-color" content="#ffffff">
 
 
-    <script src="../dist/js/all.min.js"></script>
+
   </head>
   <body>
 
@@ -58,6 +58,7 @@
           <div class="red-slide"></div>
           <div class="purple-slide"></div>
           <div class="black-slide"></div>
+          <div class="plainblack-slide"></div>
           <div class="white-slide"></div>
       </div>
 
@@ -93,7 +94,7 @@
          
         </div>
         </div>
-        <h1><span class="line">Animation facility and</span> <span class="line">production company</span></h1>
+        <h1 class="projectpage_title"><span class="line">Animation facility and</span> <span class="line">production company</span></h1>
 
         <div class="introtext_container">
           <div class="wrapper">
@@ -152,5 +153,51 @@
 
        
       </div><!-- main closed -->
+
+
+
+
+
+      <script src="../dist/js/all.min.js"></script>
+        <script>
+        if(!(/Android|iPhone|iPad|iPod|BlackBerry|Windows Phone/i).test(navigator.userAgent || navigator.vendor || window.opera)){
+              skrollr.init({
+                  forceHeight: false
+              });
+          }
+      </script>
+
+      <script>
+      $(window).bind("load", function() {
+
+        $.preloadImages = function() {
+            for (var i = 0; i < arguments.length; i++) {
+              $("<img />").attr("src", arguments[i]);
+            }
+          }
+          $.preloadImages(
+            "../dist/images/intropaper_kaha.jpg",
+            "../dist/images/intropaper_br.jpg",
+            "../dist/images/intropaper_loaf.jpg",
+            "../dist/images/intropaper_yukfoo.jpg",
+            "../dist/images/project_kaha_1.jpg",
+            "../dist/images/project_kaha_2.jpg",
+            "../dist/images/project_kaha_3.png",
+            "../dist/images/project_kaha_4.png",
+            "../dist/images/project_kaha_5.png",
+            "../dist/images/project_kaha_6.png",
+            "../dist/images/project_kaha_7.jpg",
+            "../dist/images/project_loaf_1.jpg",
+            "../dist/images/project_loaf_2.jpg",
+            "../dist/images/project_loaf_3.jpg",
+            "../dist/images/project_loaf_4.jpg",
+            "../dist/images/project_yf_1.jpg",
+            "../dist/images/project_yf_2.jpg",
+            "../dist/images/project_yf_3.jpg",
+            "../dist/images/project_br_1.jpg",
+            "../dist/images/project_br_2.jpg");
+
+      });
+    </script>
   </body>
 </html>
