--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
       </section>
 
       <section class="intro" id="intro">
-        <div class="wrapper">
+        <!-- <div class="wrapper">
           <h1>Multidisciplinary<br />Designer.</h1>
           <p>Hello, my name is Greg Rawlinson, I'm a UX/UI Designer with a background in graphic design and experience coding HTML/CSS prototypes. I enjoy creating well thought out user experiences.</p>
 
          
-        </div>
+        </div> -->
       </section>
 
       <section class="projects">
