--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
       <section class="more_about" data-center-top="">
         <div class="wrapper">
           <h1>Defining & designing<br />digital product experiences.</h1>
-          <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please view my <a class="underline" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
+          <p>Hello, my name is Greg Rawlinson, I'm a UX/UI Designer with a background in graphic design and experience coding HTML/CSS prototypes. To read more about what I do and what I've done, please view my <a class="underline" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
+         
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
                 <svg width="30px" height="26px" viewBox="0 0 30 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
