--- a/projects/kaha.html
+++ b/projects/kaha.html
@@ -91,17 +91,15 @@
 </div>
 
 
-<ul class="segment-navigator">
-      <li><a href="#seg-1" data-anchor-target="#seg-1" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-2" data-anchor-target="#seg-2" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-3" data-anchor-target="#seg-3" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-4" data-anchor-target="#seg-4" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-5" data-anchor-target="#seg-5" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-6" data-anchor-target="#seg-6" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-7" data-anchor-target="#seg-7" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-8" data-anchor-target="#seg-8" data-center-top="" data-center-bottom=""></a></li><!-- 
-   --><li><a href="#seg-9" data-anchor-target="#seg-9" data-center-top="" data-center-bottom=""></a></li><!-- 
-  --><li><a href="#seg-10" data-anchor-target="#seg-10" data-center-top="" data-center-bottom=""></a></li>
+<ul class="segment-navigator kaha">
+      <li><a href="#seg-1" data-anchor-target="#seg-1" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+   --><li><a href="#seg-2" data-anchor-target="#seg-2" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!--  
+   --><li><a href="#seg-3" data-anchor-target="#seg-3" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+   --><li><a href="#seg-6" data-anchor-target="#seg-6" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+   --><li><a href="#seg-7" data-anchor-target="#seg-7" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+   --><li><a href="#seg-8" data-anchor-target="#seg-8" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+   --><li><a href="#seg-9" data-anchor-target="#seg-9" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+  --><li><a href="#seg-10" data-anchor-target="#seg-10" data-top="" data-top-bottom=""><div class="circle"></div></a></li>
 </ul>
 
 
@@ -159,25 +157,13 @@
         </div>
       </div>
     </div>
-  </section>
 
 
-
-
-
-
-  <section id="seg-4">
     <div class="wrapper">
         <img class="project_image" src="../dist/images/project_kaha_2.jpg" alt="kaha_preso">
     </div>
-  </section>
 
 
-
-
-
-
-  <section id="seg-5">
     <div class="wrapper text">
       <div class="flexbox_container">
         <div class="left_panel">
