--- a/projects/loaf.html
+++ b/projects/loaf.html
@@ -86,7 +86,17 @@
       </div>
     </div>
 
-      <section class="project_intro">
+
+
+    <ul class="segment-navigator loaf">
+      <li><a href="#seg-1" data-anchor-target="#seg-1" data-top="" data-top-bottom=""></a></li><!-- 
+   --><li><a href="#seg-2" data-anchor-target="#seg-2" data-top="" data-top-bottom=""></a></li><!-- 
+   --><li><a href="#seg-3" data-anchor-target="#seg-3" data-top="" data-top-bottom=""></a></li><!-- 
+   --><li><a href="#seg-4" data-anchor-target="#seg-4" data-top="" data-top-bottom=""></a></li><!-- 
+   --><li><a href="#seg-5" data-anchor-target="#seg-5" data-top="" data-top-bottom=""></a></li>
+  </ul>
+
+      <section class="project_intro" id="seg-1">
 
         <div class="navigation">
           <div class="wrapper">
@@ -125,24 +135,24 @@ My role in this project included constant communication with the client.
       </section>
 
       <div class="project_segments">
-        <section>
+        <section id="seg-2">
         <div class="wrapper">
             <img class="project_image" src="../dist/images/project_loaf_1.jpg" alt="yukfoo_responsive">
         </div>
         </section>
 
-        <section>
+        <section  id="seg-3">
           <div class="wrapper">
               <img class="project_image" src="../dist/images/project_loaf_2.jpg" alt="yukfoo_webpages">
           </div>
         </section>
-        <section>
+        <section  id="seg-4">
           <div class="wrapper">
               <img class="project_image" src="../dist/images/project_loaf_3.jpg" alt="yukfoo_imac">
           </div>
         </section>
 
-         <section>
+         <section  id="seg-5">
           <div class="wrapper">
               <img class="project_image" src="../dist/images/project_loaf_4.jpg" alt="yukfoo_imac">
           </div>
