--- a/projects/yukfoo.html
+++ b/projects/yukfoo.html
@@ -86,7 +86,18 @@
       </div>
     </div>
 
-      <section class="project_intro">
+
+
+    <ul class="segment-navigator yukfoo">
+       <li><a href="#seg-1" data-anchor-target="#seg-1" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+   --><li><a href="#seg-2" data-anchor-target="#seg-2" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!--  
+   --><li><a href="#seg-3" data-anchor-target="#seg-3" data-top="" data-top-bottom=""><div class="circle"></div></a></li><!-- 
+   --><li><a href="#seg-4" data-anchor-target="#seg-4" data-top="" data-top-bottom=""><div class="circle"></div></a></li>
+  </ul>
+
+
+
+      <section class="project_intro" id="seg-1">
 
         <div class="navigation">
         <div class="wrapper">
@@ -118,18 +129,18 @@
 
 
       <div class="project_segments">
-        <section>
+        <section  id="seg-2">
           <div class="wrapper">
               <img class="project_image" src="../dist/images/project_yf_1.jpg" alt="yukfoo_responsive">
           </div>
         </section>
 
-        <section>
+        <section id="seg-3">
           <div class="wrapper">
               <img class="project_image" src="../dist/images/project_yf_2.jpg" alt="yukfoo_webpages">
           </div>
         </section>
-        <section>
+        <section  id="seg-4">
           <div class="wrapper">
               <img class="project_image" src="../dist/images/project_yf_3.jpg" alt="yukfoo_imac">
           </div>
