Implemnented Pace.js

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <script src="dist/js/pace.js"></script>
 
 
+   <!--  <script>define(['pace'], function(pace){
+  pace.start({
+    document: false
+  });
+});</script> -->
 
 
     <link href="dist/css/styles.css" rel="stylesheet" type="text/css">
