--- a/projects/kaha.html
+++ b/projects/kaha.html
@@ -32,6 +32,8 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <script src="../dist/js/pace.js"></script>
+
 
 
 
