--- a/projects/br.html
+++ b/projects/br.html
@@ -30,6 +30,8 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <script src="../dist/js/pace.js"></script>
+
   </head>
   <body>
 
