--- a/projects/yukfoo.html
+++ b/projects/yukfoo.html
@@ -29,6 +29,8 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <script src="../dist/js/pace.js"></script>
+
 
 
   </head>
